Enhance vocabulary section with improved logging and UI updates
- Added console logging for vocabulary data loading and rendering processes to aid debugging.
- Updated HTML structure for the vocabulary section, including renaming classes for clarity.
- Enhanced CSS styles for the search bar and vocabulary info display, improving user experience and aesthetics.
- Versioned the app.js script for better cache management.

--- a/index.html
+++ b/index.html
@@ -189,17 +189,17 @@
 
             <!-- N5 Vocab List Section -->
             <section id="vocabulary" class="section">
-                <div class="section-header">
+                <div class="vocab-header">
                     <h2>N5 Vocab List</h2>
-                    <div class="search-container">
+                    <div class="search-bar">
                         <input type="text" id="vocabSearch" placeholder="Search by word number or romaji..." />
-                        <button class="btn secondary" id="searchBtn">Search</button>
+                        <button class="search-btn" id="searchBtn">Search</button>
                     </div>
                 </div>
 
-                <div class="vocab-stats">
-                    <span class="stat-text">Total: <span id="totalVocabCount">0</span> words</span>
-                    <span class="stat-text">Showing: <span id="filteredVocabCount">0</span> words</span>
+                <div class="vocab-info">
+                    <span class="word-count">Total: <span id="totalVocabCount">0</span> words</span>
+                    <span class="word-count">Showing: <span id="filteredVocabCount">0</span> words</span>
                 </div>
 
                 <div id="vocabularyDatabase" class="vocab-scroll-container">
@@ -322,6 +322,6 @@
         </main>
     </div>
 
-    <script src="app.js"></script>
+    <script src="app.js?v=2"></script>
 </body>
 </html>
